manifests/default/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  labels:
    app: homer
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: homer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - image: b4bz/homer:v26.08.3
        name: homer
        volumeMounts:
        - name: config-volume
          mountPath: /www/assets/config.yml
          subPath: config.yml
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: 64Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 16

      volumes:
        - name: config-volume
          configMap:
            name: homer-config
