manifests/default/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.scheme: http
spec:
  tls:
    - hosts:
        - homer.k8s.tanksrop.xyz
      secretName: default-k8s.tanksrop.xyz
  rules:
  - host: homer.k8s.tanksrop.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homer
            port:
              number: 80
